# r-type

./: .gitignore  .gitmodules  CMakeLists.txt  CommandLineParser.hpp  README.md  VulkanBuffer.h  VulkanDebug.h  VulkanDevice.cpp  VulkanSwapChain.h  VulkanTexture.cpp  VulkanUIOverlay.h  _config.yml  base.cpp  base.h  benchmark.hpp  camera.hpp  doxygen-config  ecs.cpp  main.cpp  protocol.md
.github/workflows/: windows.yml
Builder/: Builder.hpp
ECS/: CMakeLists.txt  Core.hpp  Prefab.cpp  Prefab.hpp  Signature.hpp  ecs.cpp
ECS/Builder/: Builder.hpp
ECS/Component/: Component.hpp  ComponentArray.hpp  ComponentManager.hpp
ECS/Entity/: Entity.hpp  EntityManager.hpp
ECS/System/: ClientRendererSystem.hpp  GravitySystem.hpp  InputControllerSystem.hpp  MissileSystem.hpp  RendererSystem.hpp  System.hpp  SystemManager.hpp
assets/textures/: mob_bydo_minions.ktx  player_r-9c_war-head.ktx  space_background.ktx
client/: CMakeLists.txt  client.cpp  client.h
client/Parallax/: Parallax.cpp  Parallax.hpp
core/: CMakeLists.txt  framework.h  nbnet.h  netlib.hpp  network.cpp  network.h  pch.h  shared.cpp  shared.h  udp.h
lua/include/: lauxlib.h  lua.h
projects/VS2022/: r-type.sln
projects/VS2022/box2d/: box2d.vcxproj
projects/VS2022/r-type/: r-type.vcxproj
projects/VS2022/r-type_client/: r-type_client.vcxproj
projects/VS2022/r-type_core/: r-type_core.vcxproj
projects/VS2022/r-type_server/: r-type_server.vcxproj  r-type_server.vcxproj.filters
renderer/: CMakeLists.txt  Entrypoint.h  VulkanBuffer.h  VulkanDebug.cpp  VulkanDebug.h  VulkanDevice.cpp  VulkanInitializers.hpp  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanTools.cpp  VulkanTools.h  VulkanUIOverlay.cpp  VulkanUIOverlay.h  base.cpp  base.h  benchmark.hpp  keycodes.hpp  rt-engine.cpp  texture_example.cpp
samples/: CMakeLists.txt  main.cpp
server/: CMakeLists.txt  server.cpp  server.h
server/MovementStrategies/: CircularStrategy.cpp  CircularStrategy.hpp  DiveStrategy.cpp  DiveStrategy.hpp  Figure8Strategy.cpp  Figure8Strategy.hpp  IMovementStrategy.hpp  LinearStrategy.cpp  LinearStrategy.hpp  SinusoidalStrategy.cpp  SinusoidalStrategy.hpp  ZigZagStrategy.cpp  ZigZagStrategy.hpp
server/WaveManager/: WaveManager.cpp  WaveManager.hpp
shaders/glsl/texture/: texture.frag  texture.frag.spv  texture.vert  texture.vert.spv
src/: Makefile  Makefile.Android  client.cpp  client.h  server.cpp  server.h  shared.h
